# Jetpack

./: .clang-format  .gitignore  CMakeLists.txt  INSTALLATION_WINDOWS.md  Makefile  doc.txt  setup_windows.bat
.github/workflows/: ci-mirror.yml
bonus/client/: protocol.hpp
bonus/client/debug/: debug.cpp
bonus/client/graphics/: renderer.cpp  renderer.hpp
bonus/client/network/: network.hpp  protocol_handlers.cpp  protocol_handlers.hpp
bonus/server/: CMakeLists.txt  check_args.c  check_in_game.c  collisions.c  game_loop.c  get_types.c  handle_client.c  load_map.c  main.c  parsing.c  print_debug.c  read_client.c  send_function.c  send_game_messages.c  send_messages_to_clients.c  server.c  set_server.c  write_messages.c
bonus/server/includes/: server.h
client/: CMakeLists.txt  CMakeLists_windows.txt  gamestate.cpp  gamestate.hpp  main.cpp  protocol.hpp
client/debug/: debug.cpp  debug.hpp
client/graphics/: graphics.cpp  graphics.hpp  input_handler.cpp  input_handler.hpp  renderer.cpp  renderer.hpp
client/network/: cross_platform.hpp  network.cpp  network.hpp  protocol_handlers.cpp  protocol_handlers.hpp
docs/: Jetpack.rfc
server/: CMakeLists.txt  check_args.c  check_in_game.c  collisions.c  error_handling.c  game_loop.c  get_types.c  handle_client.c  handle_input_from_clients.c  launch_game.c  load_map.c  main.c  parsing.c  print_debug.c  put_str_fd.c  read_client.c  send_function.c  send_game_messages.c  send_messages_to_clients.c  server.c  set_server.c  write_messages.c
server/includes/: server.h
